--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
     "noImplicitAny": true,
+    "rootDir": "./src/",
     "target": "ES5",
-    "module": "ES2015"
-  }
+    "module": "ES2015",
+    "lib": ["ES2015", "DOM"]
+  },
+  "exclude": ["archive"]
 }
